region renames + 2 flags + fixes

--- a/localisation/00_lanfang_l_english.yml
+++ b/localisation/00_lanfang_l_english.yml
@@ -87,8 +87,8 @@
  desc_estate_burghers_tropical_mod:0 "Having millenia of experience, we are quite able to construct vast cities in our homeland despite the difficulties posed by the climate."
  estate_burghers_tropical_nation:0 "Tropical City Planning"
  estate_burghers_tropical_nation_desc:0 "Having millenia of experience, we are quite able to construct vast cities in our homeland despite the difficulties posed by the climate."
- estate_burghers_tropical_effect_tooltip:0 "Every owned province with Tropical climate gains:\nLocal Development Cost: §G-5%§!\nLocal Settler Increase: §G+10%§!"
- estate_burghers_tropical_revoke_effect_tooltip:0 "Every owned province with Tropical climate loses:\nLocal Development Cost: §G-5%§!\nLocal Settler Increase: §G+10%§!"
+ estate_burghers_tropical_effect_tooltip:0 "Every owned province with Tropical climate gains:\nLocal Development Cost: §G-5%§!\nLocal Settler Increase: §G+10§!"
+ estate_burghers_tropical_revoke_effect_tooltip:0 "Every owned province with Tropical climate loses:\nLocal Development Cost: §G-5%§!\nLocal Settler Increase: §G+10§!"
  estate_church_lao_animism:0 "Tolerance of Folk Religions"
  estate_church_lao_animism_desc:0 "Though it is not in keeping with our faith, we accept that many in our nation continue to follow ancient folk religions."
  estate_church_lao_animism_effect_tooltip:0 "Every owned province of the §YAnimist§! faith gains:\nLocal Missionary Strength: §R-100§!\nLocal Religious Unity Contribution: §G-100%§!"
