--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -74,6 +74,7 @@
  greater_heisean_region:0 "Greater Heisean"
  sahilan_coast_ocean:0 "Sahilan Coast"
  eastern_chantlian_coast_ocean:0 "Northeastern Amin Ocean"
- tsinhoi_region:0 "Tsinhoi"
  dasenli_region:0 "Dasenli"
  east_pemenian_coast_ocean:0 "East Pemenian Coast"
+ hangchan_region:0 "Hangchan"
+ tsutan_region:0 "Tsutan"
