--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -282,12 +282,15 @@
  hengtuan:0 "Hengtuan"
 
  zimahei_cult:0 "Zimahei Cult"
+ zimahei_cult_religion_desc:0 ""
  xiohei:0 "Xiohei"
 
  xianga:0 "Xianga"
+ xianga_religion_desc:0 ""
  moroni:0 "Moroni"
 
  xifang:0 "Xifang"
 
  gajifeng_spiritualism:0 "Gajifeng Spiritualism"
+ gajifeng_spiritualism_religion_desc:0 "Gajifeng Spiritualism is a bulk term for different sects and beliefs practiced by the Tsakung people in Dasenli and neighboring areas. They put a great importance in respecting the dead who are said to roam the countryside."
  henchu:0 "Henchu"
