--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -2655,8 +2655,8 @@
  PROV2654:0 "2654"
  PROV2655:0 "2655"
  PROV2656:0 "2656"
- PROV2657:0 "2657"
- PROV2658:0 "2658"
+ PROV2657:0 "Huanghan Coast"
+ PROV2658:0 "Hungcho Bay"
  PROV2659:0 "Guang Strait"
  PROV2660:0 "2660"
  PROV2661:0 "2661"
@@ -3184,7 +3184,7 @@
  PROV3183:0 "3183"
  PROV3184:0 "3184"
  PROV3185:0 "3185"
- PROV3186:0 "3186"
+ PROV3186:0 "Tövdov"
  PROV3187:0 "3187"
  PROV3188:0 "3188"
  PROV3189:0 "3189"
