--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -133,3 +133,7 @@
  hengtua.100.e:0 "Hujiming School"
  hengtua.100.f:0 "Shenting School"
  hengtua.100.g:0 "Haanping School"
+
+ mapin_laws_reform:0 "Mapin Laws"
+ mapin_laws_reform_desc:0 "Waging war is not so different from ruling a country - a succesful military can only be maintained through absolute discipline."
+ 
