--- a/localisation/TD_01_flavour_bunelisuli_l_english.yml
+++ b/localisation/TD_01_flavour_bunelisuli_l_english.yml
@@ -8,3 +8,8 @@
 
  khumaarati_tribe_reform:0 "Khumaarati Tribe"
  khumaarati_tribe_reform_desc:0 "Khumaarati tribes have maintained a close relations with Bunelisuli states."
+
+ chotgoriin_nuntag_reform:0 "Chötgöriin Nuntag"
+ chotgoriin_nuntag_reform_desc:0 "The Devil's Powder allowed the Bunelisuli Empire to conquer the known world. We must continue exploring this technological advancement and integrate it with our cavalry tradition even more."
+ baruun_zam_reform:0 "Baruun Zam"
+ baruun_zam_reform_desc:0 "The great sunset road stretching from Tövdov to Gkylyl was a backbone of our Empire."
