--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -282,15 +282,36 @@
  hengtuan:0 "Hengtuan"
 
  zimahei_cult:0 "Zimahei Cult"
- zimahei_cult_religion_desc:0 ""
+ zimahei_cult_religion_desc:0 "Unlike other Hengtuan religions, Zimahei Cult has focuses on patronizing the river of Zimahei, mostly represented as two (and sometimes as three) headed dragon. Just before the Bunelisuli invasion the Zimahei valley was slowly being overtaken by Xifang sects promoted by local rulers, but floodings and wars caused a massive resurgence of this religion.\nAll Hengtuan religions share a concept of Zheng, which represents ruler's legitimacy, competency and approval by heaven, but many scholars disagree on what is the most blessed government."
  xiohei:0 "Xiohei"
+ zimahei_cult_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ zimahei_cult_rebels_title:0 "Religious"
+ zimahei_cult_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ zimahei_cult_rebels_army:0 "$RELIGION$ Army"
+ zimahei_cult_rebels_demand:0 "Convert $COUNTRYNAME$"
 
  xianga:0 "Xianga"
- xianga_religion_desc:0 ""
+ xianga_religion_desc:0 "Xianga represents various cults of spirits which can vary depending on the region. Many of those spirits have been worshipped for thousands of years and spiritualism remains an important part of life of many people.\nAll Hengtuan religions share a concept of Zheng, which represents ruler's legitimacy, competency and approval by heaven, but many scholars disagree on what is the most blessed government."
  moroni:0 "Moroni"
+ xianga_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ xianga_rebels_title:0 "Religious"
+ xianga_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ xianga_rebels_army:0 "$RELIGION$ Army"
+ xianga_rebels_demand:0 "Convert $COUNTRYNAME$"
 
  xifang:0 "Xifang"
+ xifang_religion_desc:0 "Xifang is a blend between classical Xianga spiritualism and many Samadian religions and schools of thought, incorporating the idea of reincarnation into the classical Hengtuan folklore.\nAll Hengtuan religions share a concept of Zheng, which represents ruler's legitimacy, competency and approval by heaven, but many scholars disagree on what is the most blessed government."
+ xifang_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ xifang_rebels_title:0 "Religious"
+ xifang_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ xifang_rebels_army:0 "$RELIGION$ Army"
+ xifang_rebels_demand:0 "Convert $COUNTRYNAME$"
 
  gajifeng_spiritualism:0 "Gajifeng Spiritualism"
  gajifeng_spiritualism_religion_desc:0 "Gajifeng Spiritualism is a bulk term for different sects and beliefs practiced by the Tsakung people in Dasenli and neighboring areas. They put a great importance in respecting the dead who are said to roam the countryside."
  henchu:0 "Henchu"
+ gajifeng_spiritualism_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ gajifeng_spiritualism_rebels_title:0 "Religious"
+ gajifeng_spiritualism_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ gajifeng_spiritualism_rebels_army:0 "$RELIGION$ Army"
+ gajifeng_spiritualism_rebels_demand:0 "Convert $COUNTRYNAME$"
