Taedium Eastern Monuments
Still don't know how to add properly this artillery on upgrade in Xunfangzi.

--- a/localisation/TD_great_projects_l_english.yml
+++ b/localisation/TD_great_projects_l_english.yml
@@ -10,6 +10,7 @@
  province_is_or_accepts_sointuva_tt:0 "The Religion of §Y[Root.GetName]§! is §YSointuva§! and is either the State or the Syncretic Religion of the owner."
  province_is_or_accepts_itonatilu_tt:0 "The Religion of §Y[Root.GetName]§! is §YItonatilu§! and is either the State or the Syncretic Religion of the owner."
  province_is_or_accepts_lummak_mythologyi_tt:0 "The Religion of §Y[Root.GetName]§! is §YLummak Mythology§! and is either the State or the Syncretic Religion of the owner."
+ province_is_or_accepts_hengtuan_tt:0 "The Religion of §Y[Root.GetName]§! is §YHengtuan§! and is either the State or the Syncretic Religion of the owner."
 
  matliman_canal:0 "Matliman Canal"
  barzakhan_canal:0 "Barzakhan Canal"
@@ -89,3 +90,33 @@
 
  shinkhot:0 "Shinkhot"
  shinkhot_desc:0 "Important trade hub during the golden age of Bunelisuli Empire."
+ 
+ mainland_china_canal:0 "Hengtuan Mainland Canal"
+ mainland_china_canal_desc:0 " "
+ 
+ island_china_canal:0 "Hengtuan Island Canal"
+ island_china_canal_desc:0 " "
+ 
+ daifan_palace:0 "Daifan Palace"
+ daifan_palace_desc:0 " "
+ 
+ badagang_castle:0 "Badagang Castle"
+ badagang_castle_desc:0 " "
+ 
+ longgong_monument:0 "Longgong"
+ longgong_monument_desc:0 " "
+ 
+ xunfangzi_monument:0 "Xunfangzi"
+ xunfangzi_monument_desc:0 " "
+ 
+ forest_of_shrines:0 "Forest of Shrines"
+ forest_of_shrines_desc:0 " "
+ 
+ the_moon_temple:0 "The Moon Temple"
+ the_moon_temple_desc:0 " "
+ 
+ eternal_kurgan:0 "Eternal Kurgan"
+ eternal_kurgan_desc:0 " "
+ 
+ shaantin_mountain:0 "Mount Shaantin"
+ shaantin_mountain_desc:0 " "
