ideas + flag + fixes

--- a/localisation/TD_great_projects_l_english.yml
+++ b/localisation/TD_great_projects_l_english.yml
@@ -91,10 +91,10 @@
  shinkhot:0 "Shinkhot"
  shinkhot_desc:0 "Important trade hub during the golden age of Bunelisuli Empire."
  
- mainland_china_canal:0 "Hengtuan Mainland Canal"
+ mainland_china_canal:0 "Xin Shuidao"
  mainland_china_canal_desc:0 " "
  
- island_china_canal:0 "Hengtuan Island Canal"
+ island_china_canal:0 "Hakan Canals"
  island_china_canal_desc:0 " "
  
  daifan_palace:0 "Daifan Palace"
@@ -108,6 +108,7 @@
  
  xunfangzi_monument:0 "Xunfangzi"
  xunfangzi_monument_desc:0 " "
+ xunfangzi_monument_tt:0 "Get §YArtillery§! in [3363.GetName]"
  
  forest_of_shrines:0 "Forest of Shrines"
  forest_of_shrines_desc:0 " "
