--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -72,7 +72,7 @@
  bugtang_tradenode:0 "Bugtang"
  weixiao_tradenode:0 "Tövdov"
  henling_coast_tradenode:0 "Henling Coast"
- xilei_tradenode:0 "Xilei"
+ xilei_tradenode:0 "Beimen"
  eoduunso_tradenode:0 "Eoduunso"
  heisean_tradenode:0 "Heisean"
  caizhu_tradenode:0 "Caizhu"
