--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -3117,8 +3117,8 @@
  PROV3116:0 "3116"
  PROV3117:0 "Domaxud"
  PROV3118:0 "3118"
- PROV3119:0 "3119"
- PROV3120:0 "3120"
+ PROV3119:0 "Donshan"
+ PROV3120:0 "Laochuan"
  PROV3121:0 "3121"
  PROV3122:0 "3122"
  PROV3123:0 "3123"
@@ -3156,17 +3156,17 @@
  PROV3155:0 "3155"
  PROV3156:0 "Kheerdzun"
  PROV3157:0 "Baruunkhazgyr"
- PROV3158:0 "3158"
- PROV3159:0 "3159"
- PROV3160:0 "3160"
- PROV3161:0 "3161"
- PROV3162:0 "3162"
- PROV3163:0 "3163"
+ PROV3158:0 "Ninghei"
+ PROV3159:0 "Xishan"
+ PROV3160:0 "Taizun"
+ PROV3161:0 "Xilei"
+ PROV3162:0 "Shenglin"
+ PROV3163:0 "Beian"
  PROV3164:0 "Tasalbardun"
  PROV3165:0 "Deedkhavat"
- PROV3166:0 "3166"
+ PROV3166:0 "Huning"
  PROV3167:0 "Ghatögöl"
- PROV3168:0 "3168"
+ PROV3168:0 "Maujing"
  PROV3169:0 "Khanamralt"
  PROV3170:0 "Khekhnar"
  PROV3171:0 "3171"
@@ -3249,7 +3249,7 @@
  PROV3248:0 "3248"
  PROV3249:0 "3249"
  PROV3250:0 "3250"
- PROV3251:0 "3251"
+ PROV3251:0 "Caizhu"
  PROV3252:0 "3252"
  PROV3253:0 "3253"
  PROV3254:0 "3254"
@@ -3258,15 +3258,15 @@
  PROV3257:0 "3257"
  PROV3258:0 "3258"
  PROV3259:0 "3259"
- PROV3260:0 "3260"
+ PROV3260:0 "Nanan"
  PROV3261:0 "3261"
  PROV3262:0 "3262"
  PROV3263:0 "3263"
- PROV3264:0 "3264"
+ PROV3264:0 "Xinsheng"
  PROV3265:0 "3265"
- PROV3266:0 "3266"
- PROV3267:0 "3267"
- PROV3268:0 "3268"
+ PROV3266:0 "Hulan"
+ PROV3267:0 "Beimen"
+ PROV3268:0 "Ziyun"
  PROV3269:0 "3269"
  PROV3270:0 "3270"
  PROV3271:0 "3271"
@@ -3418,10 +3418,10 @@
  PROV3417:0 "3417"
  PROV3418:0 "3418"
  PROV3419:0 "3419"
- PROV3420:0 "3420"
+ PROV3420:0 "Kong-Hau"
  PROV3421:0 "3421"
  PROV3422:0 "3422"
- PROV3423:0 "3423"
+ PROV3423:0 "Linfan"
  PROV3424:0 "3424"
  PROV3425:0 "3425"
  PROV3426:0 "3426"
@@ -3432,7 +3432,7 @@
  PROV3431:0 "3431"
  PROV3432:0 "3432"
  PROV3433:0 "3433"
- PROV3434:0 "3434"
+ PROV3434:0 "Hungcho"
  PROV3435:0 "3435"
  PROV3436:0 "3436"
  PROV3437:0 "3437"
