bookmark and area names

--- a/localisation/TD_bookmarks_l_english.yml
+++ b/localisation/TD_bookmarks_l_english.yml
@@ -19,3 +19,6 @@
 
  TAEDIUM_PAQIVAZ_BOOKMARK_TITLE:0 "Highway of Civilization"
  TAEDIUM_PAQIVAZ_BOOKMARK_DESC:0 ""
+
+ TAEDIUM_HENGTUA_BOOKMARK_TITLE:0 "The Far East"
+ TAEDIUM_HENGTUA_BOOKMARK_DESC:0 ""
