religious mechanic + frankras releasable

--- a/localisation/TD_01_flavour_visparaya_l_english.yml
+++ b/localisation/TD_01_flavour_visparaya_l_english.yml
@@ -51,3 +51,28 @@
  estate_burghers_fra_autonomous_fleets_desc:0 "Despite officialy being under ownership of the great Nusabat, trade fleets of Fravasum are mostly controlled by merchant elites."
  fra_navy_reconstruction:0 "Navy Reconstruction"
  desc_fra_navy_reconstruction:0 "It will take some time and effort to centralize our naval operations."
+
+ isolationism_label_rah_jadid:0 "Cohesion"
+
+ rah_jadid_isolationism_0_tt:0 "REPLACE_ME"
+ rah_jadid_isolationism_1_tt:0 "REPLACE_ME"
+ rah_jadid_isolationism_2_tt:0 "REPLACE_ME"
+ rah_jadid_isolationism_3_tt:0 "REPLACE_ME"
+ rah_jadid_isolationism_4_tt:0 "REPLACE_ME"
+ rah_jadid_isolationism_0_ttb:0 "REPLACE_ME"
+ rah_jadid_isolationism_1_ttb:0 "REPLACE_ME"
+ rah_jadid_isolationism_2_ttb:0 "REPLACE_ME"
+ rah_jadid_isolationism_3_ttb:0 "REPLACE_ME"
+ rah_jadid_isolationism_4_ttb:0 "REPLACE_ME"
+
+ 
+ estate_church_encourage_syncretism:0 "Encourage Syncretism"
+ estate_church_encourage_syncretism_desc:0 "Promote adapting our teachings to local faiths to ease the tensions and encourage conversion."
+ estate_church_conversion_donations:0 "Conversion Donations"
+ estate_church_conversion_donations_desc:0 "Offer financial aid to anyone who is willing to convert."
+ estate_church_uttarian_political_rights:0 "Uttarian Political Rights"
+ estate_church_uttarian_political_rights_desc:0 "Political rights will pacify potential Uttarian rebellions and increase stability at the cost of autonomy in the countryside."
+ estate_church_uttarian_political_rights_gt:0 "Uttarian provinces will get:\n§Y-75.0%§! Local Religious Unity Contribution\n§R+10.00§! Minimum Autonomy."
+ estate_church_uttarian_political_rights_modifier:0 "Uttarian Political Rights"
+ desc_estate_church_uttarian_political_rights_modifier:0 "Political rights will pacify potential Uttarian rebellions and increase stability at the cost of autonomy in the countryside."
+ estate_church_uttarian_political_rights_rt:0 "Uttarian provinces will lose \n§Y-75.0%§! Local Religious Unity Contribution and §R+10.00§! Minimum Autonomy."
