--- a/localisation/TD_01_flavour_ehren_saelianism_l_english.yml
+++ b/localisation/TD_01_flavour_ehren_saelianism_l_english.yml
@@ -14,7 +14,7 @@
 
  moderate_syncretism_isolation:0 "Moderate Syncretism"
  moderate_syncretism_isolation_title:0 "Moderate Syncretism"
- moderate_syncretism_isolation_desc:0 "We are maintaining balance between Sigilianists and Ehrenists"
+ moderate_syncretism_isolation_desc:0 "We are maintaining balance between Sigilianists and Ehrenists."
 
  ehren_favourism_isolation:0 "Ehren Favourism"
  ehren_favourism_isolation_title:0 "Ehren Favourism"
@@ -29,13 +29,39 @@
  POSSIBLE_INCIDENTS:0 "Possible Incidents"
  ACTIVE_INCIDENTS:0 "Active Incidents"
  PAST_INCIDENTS:0 "Past Incidents"
- ISOLATIONISM:0 "Syncretism"
+ #ISOLATIONISM:0 "Syncretism"
+ isolationism_label_ehren_saelianism:0 "Syncretism"
  ISOLATIONISM_LEVEL_TITLE:0 ""$ISOLATIONLEVELTITLE|Y$ (§YLevel $ISOLATIONLEVEL$§!)""
  ISOLATIONISM_MECHANIC_DESCRIPTION:1 "Syncretism represents a nation's direction in Ehren-Sigilian relations. It can range from $FIRSTISOLATIONLEVELNAME|Y$ (§YLevel $FIRSTISOLATIONLEVELVALUE$§!) to $LASTISOLATIONLEVELNAME|Y$ (§YLevel $LASTISOLATIONLEVELVALUE$§!).\n\n§MSyncretism is changed through the way you react to Incidents that occur during the game. Each Incident lasts for more than 10 years and can end with your Isolationism moving towards Ehrenism, Sigilianism or leaving it unchanged.§!"
  YOUR_CURRENT_ISOLATIONISM_INSTANT:1 "Your current Syncretism level is "$ISOLATIONLEVELTITLE|Y$ (§YLevel $ISOLATIONLEVEL$§!)"\n$ISOLATIONLEVELDESCRIPTION$"
  THEIR_CURRENT_ISOLATIONISM_INSTANT:0 "$ISOLATIONLEVELTITLE|Y$ (§Y$ISOLATIONLEVEL$§!)"
  CURRENT_ISOLATIONISM_DELAYED:0 "$ISOLATIONLEVELDESCRIPTION$"
  ISOLATIONISM_LEVELS_LIST:0 "If our Syncretism levels change, our nation would get the following effects:\n$ISOLATIONISMDESCRIPTIONLIST$"
+
+  isolationism_label_ehren_saelianism_tt:0 "Syncretism represents a nation's direction in Ehren-Sigilian relations. It can range from Sigilian Supervision to Ehren Exceptionalism.\n\nSyncretism is changed through the way you react to Incidents that occur during the game. Each Incident lasts for more than 10 years and can end with your Isolationism moving towards Ehrenism, Sigilianism or leaving it unchanged."
+
+
+ saelian_ehrenic_pantheon_isolationism_0_tt:0 "§YSigilian Supervision§!\nOur current structure and doctrines are closer to Sigilianism than Ehrenism.\n---\nThis is your current level of §YSyncretism§!. It grants you:\n\n Diplomatic Reputation:§G +1.00§!\n Technology Cost:§G -5.0%§!\n Tolerance of Heretics:§G +1.00§!"
+
+ saelian_ehrenic_pantheon_isolationism_1_tt:0 "§YSigilian Favourism§!\nWe are maintaining balance between Sigilianists and Ehrenists\n---\nThis is your current level of §YSyncretism§!. It grants you:\n\n Improve Relations:§G +20.0%§!\n Idea Cost:§G -10.0%§!"
+
+ saelian_ehrenic_pantheon_isolationism_2_tt:0 "§YModerate Syncretism§!\nWe are maintaining balance between Sigilianists and Ehrenists.\n---\nThis is your current level of §YSyncretism§!. It grants you:\n\n National Unrest:§G -1.00§!\n Cost of Advisors with Ruler's Religion:§G -10.0%§!\n Religious Unity:§G +15.0%"
+
+ saelian_ehrenic_pantheon_isolationism_3_tt:0 "§YEhren Favourism§!\nOur current structure and doctrines are closer to Ehrenism than Sigilianism.\n---\nThis is your current level of §YSyncretism§!. It grants you:\n\n Manpower in True Faith provinces:§G +10.0%§!\n Construction Cost:§G -10.0%"
+
+ saelian_ehrenic_pantheon_isolationism_4_tt:0 "§YEhren Exceptionalism§!\nOur current structure and doctrines are very close to old Ehren belief system.\n---\nThis is your current level of §YSyncretism§!. It grants you:\n\n Morale Damage:§G +5.0%§!\n Development Cost:§G -2.5%§!\n Tolerance of True Faith:§G +1.00§!"
+
+
+
+ saelian_ehrenic_pantheon_isolationism_0_ttb:0 "§YSigilian Supervision§!\nOur current structure and doctrines are closer to Sigilianism than Ehrenism.\n---\nIf you reach this level of §YSyncretism§! it will grant you:\n\n Diplomatic Reputation:§G +1.00§!\n Technology Cost:§G -5.0%§!\n Tolerance of Heretics:§G +1.00§!"
+
+ saelian_ehrenic_pantheon_isolationism_1_ttb:0 "§YSigilian Favourism§!\nWe are maintaining balance between Sigilianists and Ehrenists\n---\nIf you reach this level of §YSyncretism§! it will grant you:\n\n Improve Relations:§G +20.0%§!\n Idea Cost:§G -10.0%§!"
+
+ saelian_ehrenic_pantheon_isolationism_2_ttb:0 "§YModerate Syncretism§!\nWe are maintaining balance between Sigilianists and Ehrenists.\n---\nIf you reach this level of §YSyncretism§! it will grant you:\n\n National Unrest:§G -1.00§!\n Cost of Advisors with Ruler's Religion:§G -10.0%§!\n Religious Unity:§G +15.0%"
+
+ saelian_ehrenic_pantheon_isolationism_3_ttb:0 "§YEhren Favourism§!\nOur current structure and doctrines are closer to Ehrenism than Sigilianism.\n---\nIf you reach this level of §YSyncretism§! it will grant you:\n\n Manpower in True Faith provinces:§G +10.0%§!\n Construction Cost:§G -10.0%"
+
+ saelian_ehrenic_pantheon_isolationism_4_ttb:0 "§YEhren Exceptionalism§!\nOur current structure and doctrines are very close to old Ehren belief system.\n---\nIf you reach this level of §YSyncretism§! it will grant you:\n\n Morale Damage:§G +5.0%§!\n Development Cost:§G -2.5%§!\n Tolerance of True Faith:§G +1.00§!"
 
  #### Incidents
 
