ideas + region adjustments

--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -43,7 +43,6 @@
  western_niheyan_ocean:0 "Western Niheyan Ocean"
  eastern_amin_ocean:0 "Southeastern Amin Ocean"
  thiccet_region:0 "Thiccet"
- visparaya_region:0 "Visparaya"
  qawartia_region:0 "Qawartia"
  east_kakigia_region:0 "East Kakigia"
  paqivaz_region:0 "Paqivaz"
@@ -78,3 +77,5 @@
  east_pemenian_coast_ocean:0 "East Pemenian Coast"
  hangchan_region:0 "Hangchan"
  tsutan_region:0 "Tsutan"
+ raxasa_region:0 "Raxasa"
+ huvevasahr_region:0 "Huvevasahr"
