--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -3147,7 +3147,7 @@
  PROV3146:0 "3146"
  PROV3147:0 "3147"
  PROV3148:0 "3148"
- PROV3149:0 "Ginişalk"
+ PROV3149:0 "Ginisalk"
  PROV3150:0 "3150"
  PROV3151:0 "3151"
  PROV3152:0 "3152"
