samadia prov names
31 celsius in the room, i feel like i'm in literal hell.

--- a/localisation/prov_names_adj_l_english.yml
+++ b/localisation/prov_names_adj_l_english.yml
@@ -1754,7 +1754,7 @@
  PROV_ADJ1753:0 "Kypytar"
  PROV_ADJ1754:0 "1754"
  PROV_ADJ1755:0 "1755"
- PROV_ADJ1756:0 "1756"
+ PROV_ADJ1756:0 "Harkain"
  PROV_ADJ1757:0 "Dirjasy"
  PROV_ADJ1758:0 "Myrejett"
  PROV_ADJ1759:0 "Uruncyr"
@@ -2067,7 +2067,7 @@
  PROV_ADJ2066:0 "2066"
  PROV_ADJ2067:0 "2067"
  PROV_ADJ2068:0 "2068"
- PROV_ADJ2069:0 "2069"
+ PROV_ADJ2069:0 "Niarw"
  PROV_ADJ2070:0 "2070"
  PROV_ADJ2071:0 "2071"
  PROV_ADJ2072:0 "2072"
@@ -2230,12 +2230,12 @@
  PROV_ADJ2229:0 "2229"
  PROV_ADJ2230:0 "2230"
  PROV_ADJ2231:0 "2231"
- PROV_ADJ2232:0 "2232"
- PROV_ADJ2233:0 "2233"
+ PROV_ADJ2232:0 "Autar"
+ PROV_ADJ2233:0 "Gari"
  PROV_ADJ2234:0 "2234"
  PROV_ADJ2235:0 "2235"
  PROV_ADJ2236:0 "2236"
- PROV_ADJ2237:0 "2237"
+ PROV_ADJ2237:0 "Harii"
  PROV_ADJ2238:0 "2238"
  PROV_ADJ2239:0 "2239"
  PROV_ADJ2240:0 "2240"
@@ -3063,7 +3063,7 @@
  PROV_ADJ3062:0 "3062"
  PROV_ADJ3063:0 "3063"
  PROV_ADJ3064:0 "3064"
- PROV_ADJ3065:0 "3065"
+ PROV_ADJ3065:0 "Dargali"
  PROV_ADJ3066:0 "3066"
  PROV_ADJ3067:0 "3067"
  PROV_ADJ3068:0 "3068"
@@ -3088,7 +3088,7 @@
  PROV_ADJ3087:0 "3087"
  PROV_ADJ3088:0 "3088"
  PROV_ADJ3089:0 "3089"
- PROV_ADJ3090:0 "3090"
+ PROV_ADJ3090:0 "Aspat"
  PROV_ADJ3091:0 "3091"
  PROV_ADJ3092:0 "3092"
  PROV_ADJ3093:0 "3093"
