--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1754,7 +1754,7 @@
  PROV1753:0 "Kypytar"
  PROV1754:0 "Outer Qarbali Sea"
  PROV1755:0 "Sangari Sea"
- PROV1756:0 "1756"
+ PROV1756:0 "Harkain"
  PROV1757:0 "Dirjasy"
  PROV1758:0 "Myrejett"
  PROV1759:0 "Uruncyr"
@@ -2053,39 +2053,39 @@
  PROV2052:0 "Zambtar"
  PROV2053:0 "Chartul"
  PROV2054:0 "Ÿaçagyl"
- PROV2055:0 "2055"
+ PROV2055:0 "Amutar"
  PROV2056:0 "Drömpa"
  PROV2057:0 "Ÿupigun"
- PROV2058:0 "2058"
+ PROV2058:0 "Masajanu"
  PROV2059:0 "Karunabal"
  PROV2060:0 "Wiyaharg"
  PROV2061:0 "Karunabal"
  PROV2062:0 "Karolantan"
  PROV2063:0 "The Golden Gulf"
  PROV2064:0 "2064"
- PROV2065:0 "2065"
+ PROV2065:0 "Yurgakhh"
  PROV2066:0 "Durnari"
  PROV2067:0 "Karunabal"
  PROV2068:0 "Mutna"
- PROV2069:0 "2069"
- PROV2070:0 "2070"
+ PROV2069:0 "Niarw"
+ PROV2070:0 "Kingharsa"
  PROV2071:0 "2071"
- PROV2072:0 "2072"
- PROV2073:0 "2073"
- PROV2074:0 "2074"
- PROV2075:0 "2075"
+ PROV2072:0 "Dhargaj"
+ PROV2073:0 "Nadmitt"
+ PROV2074:0 "Girthaj"
+ PROV2075:0 "Takhunit"
  PROV2076:0 "2076"
  PROV2077:0 "2077"
  PROV2078:0 "2078"
- PROV2079:0 "2079"
- PROV2080:0 "2080"
+ PROV2079:0 "Gatkarha"
+ PROV2080:0 "Kustira"
  PROV2081:0 "2081"
- PROV2082:0 "2082"
- PROV2083:0 "2083"
- PROV2084:0 "2084"
- PROV2085:0 "2085"
- PROV2086:0 "2086"
- PROV2087:0 "2087"
+ PROV2082:0 "Jharlka"
+ PROV2083:0 "Chhabang"
+ PROV2084:0 "Untkana"
+ PROV2085:0 "Hubkah"
+ PROV2086:0 "Anuhar"
+ PROV2087:0 "Mamerdang"
  PROV2088:0 "Parxande"
  PROV2089:0 "Patmar"
  PROV2090:0 "Hubinki"
@@ -2128,9 +2128,9 @@
  PROV2127:0 "Turbatak"
  PROV2128:0 "Saqe"
  PROV2129:0 "Pushtur"
- PROV2130:0 "2130"
+ PROV2130:0 "Ratikurba"
  PROV2131:0 "Kasumgar"
- PROV2132:0 "2132"
+ PROV2132:0 "Varij"
  PROV2133:0 "Gruwananst"
  PROV2134:0 "Hallekha"
  PROV2135:0 "Arkhaz"
@@ -2161,9 +2161,9 @@
  PROV2160:0 "Skawarid"
  PROV2161:0 "Widazih"
  PROV2162:0 "Askeza"
- PROV2163:0 "2163"
- PROV2164:0 "2164"
- PROV2165:0 "2165"
+ PROV2163:0 "Kundapat"
+ PROV2164:0 "Thakya"
+ PROV2165:0 "Parijwana"
  PROV2166:0 "Smalkar"
  PROV2167:0 "Smalkar"
  PROV2168:0 "Kapran"
@@ -2230,12 +2230,12 @@
  PROV2229:0 "Rasriqiha"
  PROV2230:0 "2230"
  PROV2231:0 "2231"
- PROV2232:0 "2232"
- PROV2233:0 "2233"
+ PROV2232:0 "Autar"
+ PROV2233:0 "Gari"
  PROV2234:0 "Kottamalliram"
  PROV2235:0 "Pukralitam"
  PROV2236:0 "2236"
- PROV2237:0 "2237"
+ PROV2237:0 "Harii"
  PROV2238:0 "Jatunara"
  PROV2239:0 "2239"
  PROV2240:0 "Intibats"
@@ -3063,58 +3063,58 @@
  PROV3062:0 "3062"
  PROV3063:0 "3063"
  PROV3064:0 "3064"
- PROV3065:0 "3065"
- PROV3066:0 "3066"
- PROV3067:0 "3067"
- PROV3068:0 "3068"
+ PROV3065:0 "Dargali"
+ PROV3066:0 "Rath"
+ PROV3067:0 "Iadikki"
+ PROV3068:0 "Vasna"
  PROV3069:0 "Drabazid"
- PROV3070:0 "3070"
+ PROV3070:0 "Kirsi"
  PROV3071:0 "3071"
- PROV3072:0 "3072"
- PROV3073:0 "3073"
- PROV3074:0 "3074"
- PROV3075:0 "3075"
- PROV3076:0 "3076"
+ PROV3072:0 "Sinyjuna"
+ PROV3073:0 "Suhbana"
+ PROV3074:0 "Hinthan"
+ PROV3075:0 "Kasari"
+ PROV3076:0 "Hansal"
  PROV3077:0 "3077"
- PROV3078:0 "3078"
+ PROV3078:0 "Salak"
  PROV3079:0 "3079"
- PROV3080:0 "3080"
- PROV3081:0 "3081"
- PROV3082:0 "3082"
+ PROV3080:0 "Kurup"
+ PROV3081:0 "Chamamk"
+ PROV3082:0 "Chaparra"
  PROV3083:0 "3083"
- PROV3084:0 "3084"
+ PROV3084:0 "Ranjskhora"
  PROV3085:0 "3085"
  PROV3086:0 "Sukiran"
- PROV3087:0 "3087"
- PROV3088:0 "3088"
- PROV3089:0 "3089"
- PROV3090:0 "3090"
+ PROV3087:0 "Sahnkar"
+ PROV3088:0 "Jihgnari"
+ PROV3089:0 "Ukhramuna"
+ PROV3090:0 "Aspat"
  PROV3091:0 "3091"
- PROV3092:0 "3092"
- PROV3093:0 "3093"
- PROV3094:0 "3094"
- PROV3095:0 "3095"
- PROV3096:0 "3096"
- PROV3097:0 "3097"
- PROV3098:0 "3098"
- PROV3099:0 "3099"
- PROV3100:0 "3100"
- PROV3101:0 "3101"
+ PROV3092:0 "Tamarari"
+ PROV3093:0 "Dahisait"
+ PROV3094:0 "Nahgbel"
+ PROV3095:0 "Ghasna"
+ PROV3096:0 "Bharsa"
+ PROV3097:0 "Nirgun"
+ PROV3098:0 "Khirhana"
+ PROV3099:0 "Sursurthan"
+ PROV3100:0 "Pantta"
+ PROV3101:0 "Baghsit"
  PROV3102:0 "3102"
- PROV3103:0 "3103"
- PROV3104:0 "3104"
- PROV3105:0 "3105"
- PROV3106:0 "3106"
- PROV3107:0 "3107"
- PROV3108:0 "3108"
- PROV3109:0 "3109"
- PROV3110:0 "3110"
- PROV3111:0 "3111"
- PROV3112:0 "3112"
- PROV3113:0 "3113"
- PROV3114:0 "3114"
- PROV3115:0 "3115"
- PROV3116:0 "3116"
+ PROV3103:0 "Kurapuj"
+ PROV3104:0 "Chutya"
+ PROV3105:0 "Jambural"
+ PROV3106:0 "Darti"
+ PROV3107:0 "Pakhrit"
+ PROV3108:0 "Bharingaj"
+ PROV3109:0 "Ubbhat"
+ PROV3110:0 "Saghjam"
+ PROV3111:0 "Kharhsukk"
+ PROV3112:0 "Churasyja"
+ PROV3113:0 "Takmatol"
+ PROV3114:0 "Daukhani"
+ PROV3115:0 "Naiharva"
+ PROV3116:0 "Adghari"
  PROV3117:0 "Domaxud"
  PROV3118:0 "3118"
  PROV3119:0 "Donshan"
