--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -2062,8 +2062,8 @@
  PROV2061:0 "Karunabal"
  PROV2062:0 "Karolantan"
  PROV2063:0 "The Golden Gulf"
- PROV2064:0 "2064"
- PROV2065:0 "2065"
+ PROV2064:0 "Suttirpanama"
+ PROV2065:0 "Yurgakhh"
  PROV2066:0 "Durnari"
  PROV2067:0 "Karunabal"
  PROV2068:0 "Mutna"
@@ -2234,8 +2234,8 @@
  PROV2233:0 "2233"
  PROV2234:0 "Kottamalliram"
  PROV2235:0 "Pukralitam"
- PROV2236:0 "2236"
- PROV2237:0 "2237"
+ PROV2236:0 "Gurkan"
+ PROV2237:0 "Harii"
  PROV2238:0 "Jatunara"
  PROV2239:0 "2239"
  PROV2240:0 "Intibats"
