--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -3059,10 +3059,10 @@
  PROV3058:0 "3058"
  PROV3059:0 "3059"
  PROV3060:0 "3060"
- PROV3061:0 "3061"
- PROV3062:0 "3062"
+ PROV3061:0 "Jhulasa"
+ PROV3062:0 "Jhulasa"
  PROV3063:0 "3063"
- PROV3064:0 "3064"
+ PROV3064:0 "Jhulasa"
  PROV3065:0 "Dargali"
  PROV3066:0 "Rath"
  PROV3067:0 "Iadikki"
