--- a/localisation/TD_prov_modifiers_l_english.yml
+++ b/localisation/TD_prov_modifiers_l_english.yml
@@ -25,6 +25,9 @@
  dencheng_estuary_modifier:0 "Dencheng Estuary"
  eolumgil_estuary_modifier:0 "Eolumgil Estuary"
  khanta_estuary_modifier:0 "Khanta Estuary"
+ kapshul_estuary_modifier:0 "Kapshul Estuary"
+ mazexran_estuary_modifier:0 "Mazexran Estuary"
+ paleumul_estuary_modifier:0 "Paleumul Estuary"
 
  uzkolian_toll:0 "Uzkolian Toll"
  hre_imperial_road:0 "Imperial Road"
